# currencies-showroom-server

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: admin.py  models.py  serializers.py  urls.py  validators.py  viewset.py
app/migrations/: 0001_initial.py  0002_alter_currency_issueyear.py  0003_alter_currency_imgb_alter_currency_imgf.py  0004_alter_currency_imgb_alter_currency_imgf.py  0005_alter_currency_notes.py
project/: .env.example  settings.py  urls.py
